# M3PR-ride-sharing-route-planning-framework

./: README.md  pyproject.toml  requirements-geospatial.txt
docs/: GITHUB_REPRODUCTION_DOCUMENT.md  GITHUB_UPLOAD_CHECKLIST.md  GREEDYDP_REFERENCE_NOTES.md  REAL_DATA_PREPROCESSING.md  REPRODUCTION_GUIDE.md  THIRD_PARTY_NOTICES.md  V3_CHANGELOG.md
scripts/: build_grid_matrix.py  build_shortest_path_matrix.py  compare_algorithms.py  generate_vehicles.py  map_match_orders.py  plot_results.py  preprocess_osm.py  preprocess_pipeline.py  run_demo.py  run_gdp_inputs.py  run_real_data.py  run_sweep.py
src/rideshare_m3pr/: __init__.py  grid_index.py  insertion.py  io.py  matrix.py  metrics.py  models.py  planner.py  pruning.py  synthetic.py
tests/: test_insertion.py  test_v3_regressions.py
